--- a/index.html
+++ b/index.html
@@ -1,99 +1,341 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video Editor Portfolio</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-        header {
-            background-color: #333;
-            color: white;
-            padding: 10px 0;
-            text-align: center;
-        }
-        .container {
-            width: 80%;
-            margin: 20px auto;
-        }
-        .intro {
-            text-align: center;
-            margin-bottom: 40px;
-        }
-        .video-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            gap: 20px;
-        }
-        .video-item {
-            background-color: white;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .video-item video {
-            width: 100%;
-            height: auto;
-            border-radius: 5px;
-        }
-        .video-item h3 {
-            margin: 10px 0;
-            font-size: 18px;
-            color: #333;
-        }
-        .video-item p {
-            font-size: 14px;
-            color: #666;
-        }
-        footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 10px 0;
-            margin-top: 40px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Video Editor</title>
+  <style>
+    body ,html {
+  font-family: 'Poppins', sans-serif;
+  text-transform: uppercase;      
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      overflow: hidden;
+      background-color: black; /* For browsers that do not support gradients */
+      background-image: linear-gradient(to bottom right, black, yellow);
+      overflow-y: scroll; 
+      overflow-x:hidden; 
+
+    }
+    p{font: italic small-caps bold 16px/2 cursive;}
+    h1{font: small-caps bold 24px/1 sans-serif;}
+    @font-face {
+  src: url("https://www.axis-praxis.org/fonts/webfonts/MetaVariableDemo-Set.woff2")
+    format("woff2");
+  font-family: "Meta";
+  font-style: normal;
+  font-weight: normal;
+}
+    main {
+  transition: all 0.5s;
+  -webkit-text-stroke: 4px #d6f4f4;
+  font-variation-settings: "wght" 900, "ital" 1;
+  font-size: 5rem;
+  text-align: center;
+  color: transparent;
+  font-family: "Meta", sans-serif;
+  text-shadow: 10px 10px 0px #07bccc,
+    15px 15px 0px #e601c0,
+    20px 20px 0px #e9019a,
+    25px 25px 0px #f40468,
+    45px 45px 10px #482896;
+  cursor: pointer;
+}
+
+main:hover {
+  font-variation-settings: "wght" 100, "ital" 0;
+  text-shadow: none;
+}
+
+    svg {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+
+    .content {
+      position: relative;
+      z-index: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      color: white;
+      font-size: 3rem;
+    }
+    .flip-card {
+      background-color: transparent;
+      width: 300px;
+      height: 300px;
+      perspective: 1000px;
+    }
+
+    .flip-card-inner {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      transition: transform 0.6s;
+      transform-style: preserve-3d;
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    }
+
+    .flip-card:hover .flip-card-inner {
+      transform: rotateY(180deg);
+    }
+
+    .flip-card-front,
+    .flip-card-back {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      -webkit-backface-visibility: hidden;
+      backface-visibility: hidden;
+      margin-bottom: 10px;
+    }
+
+    .flip-card-front {
+      background-color: #bbb;
+      color: rgb(250, 246, 246);
+    }
+
+    .flip-card-back {
+      opacity: 0.3;
+      background-color: #3e3e3f;
+      color: rgb(255, 251, 251);
+      transform: rotateY(180deg);
+    }
+
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+      color: #333;
+      margin: 0;
+      padding: 20px;
+    }
+
+    header {
+      color: white;
+      padding: 10px 20px;
+      text-align: center;
+    }
+
+    nav {
+      margin: 20px 0;
+      text-align: center;
+    }
+
+    nav a {
+      margin: 0 15px;
+      text-decoration: none;
+      color: #333;
+      font-weight: bold;
+    }
+
+    nav a:hover {
+      color: #363738;
+    }
+
+    .category {
+      margin: 20px 0;
+      padding: 20px;
+      border-radius: 8px;
+    }
+
+    .category h2 {
+      margin-bottom: 15px;
+    }
+
+    .category video {
+      margin-right: 10px;
+    }
+    
+  </style>
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+
 </head>
+
 <body>
-    <header>
-        <h1>My Video Editing Portfolio</h1>
-    </header>
+<main>Video Editor</main>
+  <header>
+    
+    <!-- <h1>Video Editor</h1> -->
+    <section>
+      <h1>Creative Video Editor</h1>
+      <h2>Storytelling Through Visuals</h2>
 
+      <p>As a passionate and detail-oriented Video Editor, I specialize in transforming raw footage into captivating stories. With [X years] of experience in video editing, I have a proven track record of crafting engaging content for diverse platforms, including YouTube, social media, and commercial projects. My skills range from precise cutting and trimming to advanced color grading, audio mixing, and visual effects.        
+        Explore my portfolio to see how I turn concepts into immersive visual experiences.</p>
+    </section>
+  </header>
+
+  <!-- <nav>
+    <a href="category1.html">Category 1</a>
+    <a href="category2.html">Category 2</a>
+    <a href="category3.html">Category 3</a>
+</nav> -->
+<svg>
+  <defs>
+    <radialGradient id="grad1" cx="50%" cy="50%" r="50%" fx="50%" fy="50%">
+      <stop offset="0%" style="stop-color: #ff9a9e; stop-opacity: 1" />
+      <stop offset="100%" style="stop-color: #fad0c4; stop-opacity: 0" />
+    </radialGradient>
+  </defs>
+
+  <circle cx="50%" cy="100%" r="60" fill="url(#grad1)" opacity="0.8">
+    <animate attributeName="cy" values="100%;-20%" dur="15s" repeatCount="indefinite" />
+    <animate attributeName="r" values="40;80;40" dur="15s" repeatCount="indefinite" />
+  </circle>
+
+  <circle cx="30%" cy="110%" r="40" fill="url(#grad1)" opacity="0.5">
+    <animate attributeName="cy" values="110%;-30%" dur="20s" repeatCount="indefinite" />
+    <animate attributeName="r" values="30;70;30" dur="20s" repeatCount="indefinite" />
+  </circle>
+
+  <circle cx="80%" cy="120%" r="50" fill="url(#grad1)" opacity="0.6">
+    <animate attributeName="cy" values="120%;-40%" dur="25s" repeatCount="indefinite" />
+    <animate attributeName="r" values="35;85;35" dur="25s" repeatCount="indefinite" />
+  </circle>
+</svg>
+
+ 
+  <!-- <iframe width="300" height="315" src="https://www.youtube.com/embed/videoseries?si=BT_N17JdGyWuhEnb&amp;list=PL8zwJG_9OAhPqCBwqqlZwhKaRKDG1P6mE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+
+<iframe src="https://drive.google.com/file/d/1gWU8W3TiQpytMMKUiNTuMRVxasPl6k9v/view?usp=drivesdk" width="640" height="480" allow="autoplay"></iframe> -->
+  <!-- <nav> -->
+  <section class="category">
     <div class="container">
-        <div class="intro">
-            <h2>Welcome!</h2>
-            <p>Check out some of my recent video editing projects below.</p>
+      <div class="row">
+        <div class="col-sm">
+          <a href="category1.html">
+            <div class="flip-card">
+              <!-- <h1>
+        Title Animation</h1>  -->
+              <div class="flip-card-inner">
+                <div class="flip-card-front">
+                  <img src="/Files/Title Animation.jpg" alt="Avatar" style="width:300px;height:300px;">
+                </div>
+                <div class="flip-card-back">
+                  <h1>
+                    Title Animation</h1>
+                  <!-- <p>Architect & Engineer</p>  -->
+                  <p>Click here</p>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-sm">
+          <a href="category2.html">
+            <div class="flip-card">
+              <!-- <h1>
+        Title Animation</h1>  -->
+              <div class="flip-card-inner">
+                <div class="flip-card-front">
+                  <img src="/Files/Medical Industry.jpg" alt="Avatar" style="width:300px;height:300px;">
+                </div>
+                <div class="flip-card-back">
+                  <h1>
+                    Medical Industry</h1>
+                  <!-- <p>Architect & Engineer</p>  -->
+                  <p>Click here</p>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-sm">
+          <a href="category3.html">
+            <div class="flip-card">
+              <!-- <h1>
+              Title Animation</h1>  -->
+              <div class="flip-card-inner">
+                <div class="flip-card-front">
+                  <img src="/Files/Product Videos.jpg" alt="Avatar" style="width:300px;height:300px;">
+                </div>
+                <div class="flip-card-back">
+                  <h1>
+                    Product Videos</h1>
+                  <!-- <p>Architect & Engineer</p>  -->
+                  <p>Click here</p>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-sm">
+          <a href="ITIndustry.html">
+            <div class="flip-card">
+              <!-- <h1>
+                    Title Animation</h1>  -->
+              <div class="flip-card-inner">
+                <div class="flip-card-front">
+                  <img src="/Files/IT Industry.jpg" alt="Avatar" style="width:300px;height:300px;">
+                </div>
+                <div class="flip-card-back">
+                  <h1>
+                    IT Industry</h1>
+                  <!-- <p>Architect & Engineer</p>  -->
+                  <p>Click here</p>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-sm">
+          <a href="JewelryIndustry.html">
+            <div class="flip-card">
+              <!-- <h1>
+                          Title Animation</h1>  -->
+              <div class="flip-card-inner">
+                <div class="flip-card-front">
+                  <img src="/Files/Jewelry Industry.jpg" alt="Avatar" style="width:300px;height:300px;">
+                </div>
+                <div class="flip-card-back">
+                  <h1>
+                    Jewelry Industry Videos</h1>
+                  <!-- <p>Architect & Engineer</p>  -->
+                  <p>Click here</p>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-sm">
+          <a href="IndigoTraining.html">
+            <div class="flip-card">
+              <!-- <h1>
+                                      Title Animation</h1>  -->
+              <div class="flip-card-inner">
+                <div class="flip-card-front">
+                  <img src="/Files/Indigo Training.jpg" alt="Avatar" style="width:300px;height:300px;">
+                </div>
+                <div class="flip-card-back">
+                  <h1>
+                    Indigo Training Videos</h1>
+                  <!-- <p>Architect & Engineer</p>  -->
+                  <p>Click here</p>
+                </div>
+              </div>
+            </div>
+          </a>
         </div>
 
-        <div class="video-grid">
-            <div class="video-item">
-                <video controls>
-                    <source src="video1.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                </video>
-                <h3>Project Title 1</h3>
-                <p>Description of the project, tools used, and any other relevant details.</p>
-            </div>
-            <div class="video-item">
-                <video controls>
-                    <source src="video2.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                </video>
-                <h3>Project Title 2</h3>
-                <p>Description of the project, tools used, and any other relevant details.</p>
-            </div>
-            <!-- Add more video items as needed -->
-        </div>
-    </div>
-
-    <footer>
-        <p>&copy; 2024 Your Name - Video Editor</p>
-    </footer>
+</div>
+</div>
+</section>
+        <!-- <nav> -->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+        <footer>
+          <p>&copy; 2024 Abhishek Shah - Video Editor</p>
+      </footer>
 </body>
+
 </html>
