--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ main:hover {
         Title Animation</h1>  -->
               <div class="flip-card-inner">
                 <div class="flip-card-front">
-                  <img src="/Files/Title Animation.jpg" alt="Avatar" style="width:300px;height:300px;">
+                  <img src="Files/Title Animation.jpg" alt="Avatar" style="width:300px;height:300px;">
                 </div>
                 <div class="flip-card-back">
                   <h1>
@@ -237,7 +237,7 @@ main:hover {
         Title Animation</h1>  -->
               <div class="flip-card-inner">
                 <div class="flip-card-front">
-                  <img src="/Files/Medical Industry.jpg" alt="Avatar" style="width:300px;height:300px;">
+                  <img src="Files/Medical Industry.jpg" alt="Avatar" style="width:300px;height:300px;">
                 </div>
                 <div class="flip-card-back">
                   <h1>
@@ -256,7 +256,7 @@ main:hover {
               Title Animation</h1>  -->
               <div class="flip-card-inner">
                 <div class="flip-card-front">
-                  <img src="/Files/Product Videos.jpg" alt="Avatar" style="width:300px;height:300px;">
+                  <img src="Files/Product Videos.jpg" alt="Avatar" style="width:300px;height:300px;">
                 </div>
                 <div class="flip-card-back">
                   <h1>
@@ -275,7 +275,7 @@ main:hover {
                     Title Animation</h1>  -->
               <div class="flip-card-inner">
                 <div class="flip-card-front">
-                  <img src="/Files/IT Industry.jpg" alt="Avatar" style="width:300px;height:300px;">
+                  <img src="Files/IT Industry.jpg" alt="Avatar" style="width:300px;height:300px;">
                 </div>
                 <div class="flip-card-back">
                   <h1>
@@ -294,7 +294,7 @@ main:hover {
                           Title Animation</h1>  -->
               <div class="flip-card-inner">
                 <div class="flip-card-front">
-                  <img src="/Files/Jewelry Industry.jpg" alt="Avatar" style="width:300px;height:300px;">
+                  <img src="Files/Jewelry Industry.jpg" alt="Avatar" style="width:300px;height:300px;">
                 </div>
                 <div class="flip-card-back">
                   <h1>
@@ -313,7 +313,7 @@ main:hover {
                                       Title Animation</h1>  -->
               <div class="flip-card-inner">
                 <div class="flip-card-front">
-                  <img src="/Files/Indigo Training.jpg" alt="Avatar" style="width:300px;height:300px;">
+                  <img src="Files/Indigo Training.jpg" alt="Avatar" style="width:300px;height:300px;">
                 </div>
                 <div class="flip-card-back">
                   <h1>
