--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ main:hover {
       <h1>Creative Video Editor</h1>
       <h2>Storytelling Through Visuals</h2>
 
-      <p>As a passionate and detail-oriented Video Editor, I specialize in transforming raw footage into captivating stories. With [X years] of experience in video editing, I have a proven track record of crafting engaging content for diverse platforms, including YouTube, social media, and commercial projects. My skills range from precise cutting and trimming to advanced color grading, audio mixing, and visual effects.        
+      <p>As a passionate and detail-oriented Video Editor, I specialize in transforming raw footage into captivating stories. With 6 of experience in video editing, I have a proven track record of crafting engaging content for diverse platforms, including YouTube, social media, and commercial projects. My skills range from precise cutting and trimming to advanced color grading, audio mixing, and visual effects.        
         Explore my portfolio to see how I turn concepts into immersive visual experiences.</p>
     </section>
   </header>
