--- a/workart.html
+++ b/workart.html
@@ -348,7 +348,7 @@
 
                         <div class="block block--inline block-heading" data-definition-name="Heading"
                             data-definition-type="generic" data-id="8347468" data-order="1" id="block-8347468">
-                            <a href="/workart.html">  <h2 data-alignment="center" class="heading animate-in animate-in-go"> Explore My Work</h2></a>
+                            <a href="https://abhi4sure.github.io/Portfolio/workart.html">  <h2 data-alignment="center" class="heading animate-in animate-in-go"> Explore My Work</h2></a>
                         </div>
 
                         <div class="block block--block-element block-links" data-definition-name="Links"
