--- a/workart.html
+++ b/workart.html
@@ -309,8 +309,8 @@
 
                       
                       </li>
-                      <li><a target="_self" class="" href="https://abhi4sure.github.io/Portfolio/Files/Cover%20Letter.pdf">Cover Letter</a>
-                      </li>
+                      <!-- <li><a target="_self" class="" href="https://abhi4sure.github.io/Portfolio/Files/Cover%20Letter.pdf">Cover Letter</a>
+                      </li> -->
                     </ul>
               </nav>
 
