--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ padding-left: unset;
               <div class="block block--inline block-bio" data-definition-name="Bio" data-definition-type="generic" data-id="3075053" data-order="2" id="block-3075053">
   <section class="block-text">
     <div class="wrapper--small animate-in animate-in-go" data-richtext="content" data-bio="">
-        <p>Resourceful and organized video production professional with over seven years of expertise in video editing, motion graphics, and post-production across various industries including entertainment, jewelry, and healthcare.  Skilled in End-to-End Production processes, from pre-production planning to post-production editing, ensuring highquality output and timely delivery.  Proficient in Motion Graphics and VFX with advanced skills in Adobe Photoshop, After Effects, and Premiere Pro, specializing in creating engaging visual content.  Versatile Editor with extensive experience in raw footage editing, typography videos, color correction, and creating 2D and event video content.</p>
+        <p>Resourceful and organized video production professional with over seven years of expertise in video editing, motion graphics, and post-production across various industries including entertainment, jewelry, and healthcare. Skilled in End-to-End Production processes, from pre-production planning to post-production editing, ensuring highquality output and timely delivery. Proficient in Motion Graphics and VFX with advanced skills in Adobe Photoshop, After Effects, and Premiere Pro, specializing in creating engaging visual content. Versatile Editor with extensive experience in raw footage editing, typography videos, color correction, and creating 2D and event video content.</p>
     </div>
 </section>
 
